# AI-File-Organiser

./: README.md  docker-compose.yml
organiser/: .dockerignore  Dockerfile  go.mod  main.go
organiser/classifier/: classifier.go
organiser/mover/: bench_test.go  errors_test.go  integration_test.go  mock_test.go  mover.go  process_move_test.go
organiser/network/: client.go
organiser/scanner/: bench_test.go  get_directory_test.go  scan_deps_test.go  scanner.go  scanner_test.go
organiser/server/: server.go
python/: .dockerignore  Dockerfile  classifier.py  client.py  config.py  file_utils.py  main.py  pyproject.toml  schemas.py
