[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit",email = "workwithvrz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "transformers (>=5.5.0,<6.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
